place search into navbar/ fix jumping

--- a/meal-sharing-project/src/components/SearchBar/Search.css
+++ b/meal-sharing-project/src/components/SearchBar/Search.css
@@ -6,6 +6,7 @@
   position: relative;
   width: 300px;
   margin: 0 auto;
+  height: 50px;
 }
 
 .form {
@@ -43,7 +44,11 @@
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   position: absolute;
+  top: 60px;
+  left: 0;
   width: 100%;
+  max-height: 200px;
+  overflow-y: auto;
   z-index: 1000;
 }
 
